clear button is fixed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "type": "chrome",
       "request": "launch",
       "name": "Open index.html",
-      "file": "d:\\Uni\\Web Design _ HTML Basic\\7_آموزش Javascript پروژه محور\\10_ Project\\Project\\index.html"
+      "file": "D:\\Namira\\Toturial\\2_ToDo List\\index.html"
     }
   ]
 }
